--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQaNDiT5Ct8RoxO2u2TfJiTwuUlavxOCzkoAUjdWnIHsOpUgceOQasmepwim9Xs2Nsv5w&usqp=CAU"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Generador de Desafios Creativos</title>
   </head>
   <body>
     <div id="root"></div>
